--- a/index.html
+++ b/index.html
@@ -27,25 +27,69 @@
   </head>
   <body>
     <div class="container">
-      <div class="row">
-        <div class="left col-md-6">
+      <div class="row p-5">
+        <div class="col-md-6 text-left">
           <h1>
             Learn to code by <br />
             watching others
           </h1>
-          <p>
+          <p class="lead">
             See how experienced developers solve problems in real-time. Watching
             scripted tutorials is great, but understanding how developers think
             is invaluable.
           </p>
         </div>
         <!--end of col-md-6-->
-        <div class="right col-md-6">
-          <button>Try it free 7 days then $20/mo. thereafter</button>
-          <form action="">
-            First Name Last Name Email Address Password Claim your free trial By
-            clicking the button, you are agreeing to our Terms and Services
-          </form>
+        <div class="col-md-6 text-center">
+          <div class="freeTry">
+            <button
+              class="btn btn-primary btn-block rounded border-0 p-2 mb-2"
+              style="background-color: hsl(248, 32%, 49%);"
+            >
+              <span>Try it free 7 days</span> then $20/mo. thereafter
+            </button>
+          </div>
+          <div class="contactForm rounded p-5">
+            <form>
+              <div class="form-group">
+                <input
+                  type="text"
+                  class="form-control form-control-lg"
+                  id="firstName"
+                  placeholder="First Name"
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  type="text"
+                  class="form-control form-control-lg"
+                  id="lastName"
+                  placeholder="Last Name"
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  type="email"
+                  class="form-control form-control-lg"
+                  id="email"
+                  placeholder="Email Address"
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  type="password"
+                  class="form-control form-control-lg"
+                  id="password"
+                  placeholder="Password"
+                />
+              </div>
+              <button class="btn btn-success btn-block trial p-2 mb-2">
+                Claim your free trial
+              </button>
+              By clicking the button, you are agreeing to our Terms and Services
+            </form>
+          </div>
+          <!--end of contact Form-->
         </div>
         <!--end of col-md-6-->
       </div>
